fixing z-index bug at advanced search wrapper

--- a/yad2-front/src/styles/components/body/searchBar/_SearchBarAdvanced.scss
+++ b/yad2-front/src/styles/components/body/searchBar/_SearchBarAdvanced.scss
@@ -1,5 +1,5 @@
 .search-bar__advanced__wrapper{
-    z-index: 11;
+    z-index: 20;
     background: white;
     position: absolute;
     border-top: $very-light-gray;
